compiler/testData/diagnostics/testsWithJsStdLib/name/topLevelMethodAndProperty.kt
// FIR_IDENTICAL
package foo

<!JS_NAME_CLASH!>fun bar()<!> = 23

<!JS_NAME_CLASH!>val bar<!> = 32
